# finetunedoc

./: .gitignore  AGENTS.md  README.md  cursor_mcp_config.json  push_to_github.sh  pyproject.toml
cobol_compiler_finetuning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: cobol_dataset_val.jsonl  dataset_stats.json
local_inference/: README.md  load_model.py
mcp_server/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  VENV_SETUP.md  __init__.py  __main__.py  config.py  model_client.py  requirements.txt  server.py  start_mcp.sh  test_server.py
runpod/: README.md  finetune_mistral7b.py  finetune_mistral7b_amd.py  requirements.txt  requirements_amd.txt  start.sh  start_amd.sh  upload_files.sh
scripts/: README.md  extract_pdfs.py  prepare_dataset.py  requirements_phase1.txt  run_phase1.sh
