[project]
name = "cobol-compiler-finetuning"
version = "0.1.0"
description = "Fine-tune Mistral 7B on COBOL documentation"
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
]

[project.optional-dependencies]
phase1 = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
]
phase2 = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "trl>=0.7.0",
    "datasets>=2.14.0",
    "tensorboard>=2.14.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]
phase4 = [
    "fastmcp>=0.9.0",
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]

[tool.uv]
dev-dependencies = []
